helm/charts/test-app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app
spec:
  rules:
    - host: test.koudijs.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-app
                port:
                  number: 80
  tls:
    - secretName: test-koudijs-lan
      hosts:
        - test.koudijs.lan
